# prime-selector

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  prime-selector.py
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in  PRIMEselector.desktop.in
data/desktop/: Makefile.am  Makefile.in  PRIMEselector.desktop.in
data/icons/: Makefile.in
data/icons/hicolor/: Makefile.am  Makefile.in
data/icons/hicolor/128x128/: Makefile.in
data/icons/hicolor/128x128/apps/: Makefile.am  Makefile.in
data/icons/hicolor/16x16/: Makefile.in
data/icons/hicolor/16x16/apps/: Makefile.am  Makefile.in
data/icons/hicolor/24x24/: Makefile.in
data/icons/hicolor/24x24/apps/: Makefile.am  Makefile.in
data/icons/hicolor/36x36/: Makefile.in
data/icons/hicolor/36x36/apps/: Makefile.am  Makefile.in
data/icons/hicolor/48x48/: Makefile.in
data/icons/hicolor/48x48/apps/: Makefile.am  Makefile.in
data/icons/hicolor/64x64/: Makefile.in
data/icons/hicolor/64x64/apps/: Makefile.am  Makefile.in
data/icons/hicolor/scalable/: Makefile.in
data/icons/hicolor/scalable/apps/: Makefile.am  Makefile.in
src/: .gitignore  Makefile.am  Makefile.in  prime-selector-select.c  prime-selector.c  prime-selector.in  primeselector.c
src/PRIMEselector/: Makefile.am  Makefile.in  application.py
